--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -19,4 +19,4 @@ jobs:
 
       - name: Run Packer build
         run: |
-          packer build index.json
+          packer build ../../packer/index.json
