--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -19,6 +19,7 @@ jobs:
         id: find_file
         run: |
           FILE_PATH=$(find . -name "index.json" -path "../../packer/*")
+          echo "$FILE_PATH"
           echo "{file_path}={$FILE_PATH}" >> $GITHUB_OUTPUT
 
       - name: Run Packer build
