--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -19,4 +19,8 @@ jobs:
           aws-region: us-east-1
 
       - name: Packer Build
-        run: packer build packer/index.json
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_KEY }}
+        run: |
+          packer build packer/index.json
