--- a/ansible/nginx-container.yml
+++ b/ansible/nginx-container.yml
@@ -1,14 +1,37 @@
 ---
 - name: Install Nginx in AWS AMI Docker container
-  hosts: all
-  remote_user: ubuntu
-  become: true
+  hosts: localhost
+  gather_facts: False
   vars:
     ansible_ssh_private_key_file: /home/arshak/Desktop/pem/virginia.pem
     container_count: 4
     default_container_name: docker
     default_container_image: ubuntu
     default_container_command: sleep 1
+  tasks:
+    - name: Get EC2 instances
+      ec2_remote_facts:
+        aws_access_key: "{{ aws_access_key }}"
+        aws_secret_key: "{{ aws_secret_key }}"
+        region: "us-east-1"
+      register: ec2_instances
+
+    - name: Sort EC2 instances by launch time
+      set_fact:
+        sorted_instances: "{{ ec2_instances.instances | sort(attribute='launch_time') }}"
+
+    - name: Take last created instance
+      set_fact:
+        last_instance: "{{ sorted_instances[-1] }}"
+
+    - name: Configure dynamic inventory with last instance
+      add_host:
+        name: "{{ last_instance.private_ip_address }}"
+        groups: last_instance
+
+- name: Install Nginx on last instance
+  hosts: last_instance
+  become: true
   tasks:
     - name: Update apt package cache
       apt:
@@ -94,7 +117,7 @@
 
     - name: Create file
       file:
-        path: /home/ubuntu/scrap.sh
+        path: /home/ubuntu/opt/scrap.sh
         state: touch
         mode: 0644  # Update with appropriate permissions if needed
         owner: ubuntu
@@ -102,12 +125,9 @@
     - name: Add NGINX conf
       copy:
         src: ./../nginx/scrap.sh
-        dest: /home/ubuntu/scrap.sh
+        dest: /home/ubuntu/opt/scrap.sh
         owner: root  # Update with appropriate user if different
         mode: 0644  # Update with appropriate permissions if needed
 
-    - name: Create cron job
-      cron:
-        name: RunScript
-        minute: "*/1"
-        job: "/scrap.sh"
+    - name: sleepy
+      script: /opt/scrap.sh
