--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -35,7 +35,10 @@ jobs:
 
       - name: Terraform Apply
         working-directory: ./terraform/ec2
-        run: terraform apply -auto-approve -var="access_key=${{ secrets.AWS_ACCESS_KEY }}" -var="secret_key=${{ secrets.AWS_SECRET_KEY }}" -var-file="./variables.tfvars"
+        run: terraform apply -auto-approve -var="access_key=${{ secrets.AWS_ACCESS_KEY }}"
+          -var="secret_key=${{ secrets.AWS_SECRET_KEY }}"
+          -var="private_key_path=${{ secrets.AWS_PRIVATE_KEY }}"
+          -var-file="./variables.tfvars"
 
       - name: Set up Python
         uses: actions/setup-python@v2
