--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -29,22 +29,40 @@ jobs:
       #   run: |
       #     packer build packer/index.json
 
-      # - name: Terraform Init
-      #   run: terraform init -upgrade
-      #   working-directory: ./terraform/ec2
+      - name: Terraform Init
+        run: terraform init -upgrade
+        working-directory: ./terraform/ec2
 
-      # - name: Terraform Apply
-      #   working-directory: ./terraform/ec2
-      #   run: terraform apply -auto-approve -var="access_key=${{ secrets.AWS_ACCESS_KEY }}"
-      #     -var="secret_key=${{ secrets.AWS_SECRET_KEY }}"
-      #     -var="private_key_path=${{ secrets.AWS_PRIVATE_KEY }}"
-      #     -var-file="./variables.tfvars"
+      - name: Terraform Apply
+        working-directory: ./terraform/ec2
+        run: terraform apply -auto-approve -var="access_key=${{ secrets.AWS_ACCESS_KEY }}"
+          -var="secret_key=${{ secrets.AWS_SECRET_KEY }}"
+          -var="private_key_path=${{ secrets.AWS_PRIVATE_KEY }}"
+          -var-file="./variables.tfvars"
 
-      # - name: Set up Python
-      #   uses: actions/setup-python@v2
-      #   with:
-      #     python-version: 3.x
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.x
+
+      - name: Get Terraform Outputs
+        id: terraform_outputs
+        run: |
+          output=$(terraform output -txt)
+          echo "::set-output name=outputs::$output"
+
+      - name: Create Ansible Inventory
+        working-directory: ./ansible
+        run: |
+          echo "${{ steps.terraform_outputs.outputs.outputs }}" > terraform_outputs.json
+          echo "[my_hosts]" > ansible_inventory.ini
+          jq -r '.my_host.value[]' terraform_outputs.json >> ansible_inventory.ini
+
+      - name: Install Ansible
+        run: |
+          sudo apt update
+          sudo apt install -y ansible
 
       - name: Run Ansible playbook
         working-directory: ./ansible
-        run: ansible-playbook nginx-container.yml -e "aws_access_key=${{ secrets.AWS_ACCESS_KEY }}" -e "aws_secret_key=${{ secrets.AWS_SECRET_KEY }}"
+        run: ansible-playbook -i ansible_inventory.ini nginx-container.yml -e "aws_access_key=${{ secrets.AWS_ACCESS_KEY }}" -e "aws_secret_key=${{ secrets.AWS_SECRET_KEY }}"
