--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -62,8 +62,9 @@ jobs:
           sudo apt update
           sudo apt install -y ansible
 
+      - name: Set up SSH key
+        run: echo "$SSH_PRIVATE_KEY" > ~/.ssh/id_rsa && chmod 600 ~/.ssh/id_rsa
+
       - name: Run Ansible playbook
         working-directory: ./ansible
-        env:
-          ANSIBLE_PRIVATE_KEY: ${{ secrets.AWS_PRIVATE_KEY }}
         run: ansible-playbook -i inventory nginx-container.yml -e "aws_access_key=${{ secrets.AWS_ACCESS_KEY }}" -e "aws_secret_key=${{ secrets.AWS_SECRET_KEY }}"
