--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -63,7 +63,10 @@ jobs:
           sudo apt install -y ansible
 
       - name: Set up SSH key
-        run: echo "$SSH_PRIVATE_KEY" > ~/.ssh/authorized_keys && chmod 600 ~/.ssh/authorized_keys
+        run: |
+          mkdir -p ~/.ssh
+          touch  ~/.ssh/id_rsa
+          echo "${{ secrets.AWS_PRIVATE_KEY }}" > ~/.ssh/id_rsa && chmod 600 ~/.ssh/id_rsa
 
       - name: Run Ansible playbook
         working-directory: ./ansible
