--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -55,22 +55,13 @@ jobs:
           publicIp=$(terraform output aws_instance)
           echo "::set-output name=outputs::$publicIp"
 
-      - name: Create Ansible Inventory
-        working-directory: ./ansible
-        run: |
-          echo "${{ steps.aws_instance.outputs.outputs }}" >> "./inventories"
-
       - name: Install Ansible
         run: |
           sudo apt update
           sudo apt install -y ansible
 
-      # - name: Set up SSH key
-      #   run: |
-      #     mkdir -p ~/.ssh
-      #     touch  ~/.ssh/id_rsa
-      #     echo "${{ secrets.AWS_PRIVATE_KEY }}" > ~/.ssh/id_rsa && chmod 600 ~/.ssh/id_rsa
-
       - name: Run Ansible playbook
         working-directory: ./ansible
-        run: ansible-playbook -i inventories nginx-container.yml --extra-vars "ansible_ssh_private_key_file=${{ secrets.AWS_PRIVATE_KEY }}" -e "aws_access_key=${{ secrets.AWS_ACCESS_KEY }}" -e "aws_secret_key=${{ secrets.AWS_SECRET_KEY }}"
+        run: |
+          echo "${{ steps.aws_instance.outputs.outputs }}" >> inventories
+          ansible-playbook -i inventories nginx-container.yml --extra-vars "ansible_ssh_private_key_file=${{ secrets.AWS_PRIVATE_KEY }}" -e "aws_access_key=${{ secrets.AWS_ACCESS_KEY }}" -e "aws_secret_key=${{ secrets.AWS_SECRET_KEY }}"
