--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -63,5 +63,5 @@ jobs:
       - name: Run Ansible playbook
         working-directory: ./ansible
         run: |
-          echo "${{ steps.aws_instance.outputs.outputs }}" >> inventories
-          ansible-playbook -i inventories nginx-container.yml --extra-vars "ansible_ssh_private_key_file=${{ secrets.AWS_PRIVATE_KEY }}" -e "aws_access_key=${{ secrets.AWS_ACCESS_KEY }}" -e "aws_secret_key=${{ secrets.AWS_SECRET_KEY }}"
+          echo ${{ steps.aws_instance.outputs.outputs }} >> inventories
+          ansible-playbook -i inventories nginx-container.yml -e "ansible_ssh_private_key=${{ secrets.AWS_PRIVATE_KEY }}" -e "aws_access_key=${{ secrets.AWS_ACCESS_KEY }}" -e "aws_secret_key=${{ secrets.AWS_SECRET_KEY }}"
