--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -61,7 +61,8 @@ jobs:
 
       - name: Set up SSH key
         run: |
-          touch ~/.ssh/id_ra
+          mkdir -p ~/.ssh/
+          touch ~/.ssh/id_rsa
           echo "${{ secrets.AWS_PRIVATE_KEY }}" > ~/.ssh/id_rsa && chmod 600 ~/.ssh/id_rsa
 
       - name: Run Ansible playbook
